--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="jquery-3.7.1.min.js"></script>
-
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 </head>
 
 
