--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ function cargara(){
 }
 
 async function loadData() {
-  const response = await fetch("https://thingproxy.freeboard.io/fetch/https://www.mk8dx-lounge.com/PlayerDetails/17051/", {
+const url = 'https://corsproxy.io/?' + encodeURIComponent('https://www.mk8dx-lounge.com/PlayerDetails/17051');
+  const response = await fetch(url, {
 	        'mode': 'no-cors',
 	        'headers': {
             	'Access-Control-Allow-Origin': '*',
