--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ function cargara(){
 }
 
 async function loadData() {
-const url = 'https://corsproxy.io/?' + encodeURIComponent('https://www.mk8dx-lounge.com/PlayerDetails/17051');
-  const response = await fetch(url, {
+
+  const response = await fetch("https://corsproxy.io/?https%3A%2F%2Fwww.mk8dx-lounge.com%2FPlayerDetails%2F17051", {
 	        'mode': 'no-cors',
 	        'headers': {
             	'Access-Control-Allow-Origin': '*',
